--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,7 +29,7 @@ jobs:
         docker images
 
     - name: Deploy to Minikube
-      run: kubectl apply -f k8s-wisecow.yaml
+      run: kubectl apply -f deployment.yaml
 
     - name: Test service URLs
       run: |
