--- a/service.yaml
+++ b/service.yaml
@@ -9,4 +9,4 @@ spec:
     - protocol: TCP
       port: 80
       targetPort: 4499
-  type: ClusterIP   # Change service type to ClusterIP
+  type: NodePort
