--- a/deployment.yaml
+++ b/deployment.yaml
@@ -20,3 +20,17 @@ spec:
         imagePullPolicy: Always
         ports:
         - containerPort: 4499
+
+--
+apiVersion: v1
+kind: Service
+metadata:
+  name: wisecow-service
+spec:
+  selector:
+    app: wisecow
+  ports:
+    - protocol: TCP
+      port: 80
+      targetPort: 4499
+  type: NodePort
