--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,3 +35,8 @@ jobs:
       run: |
         echo "Service URLs:"
         minikube service list
+
+    - name: Get Service URL
+      run: |
+        SERVICE_URL=$(minikube service wisecow-service --url)
+        echo "Service URL: $SERVICE_URL"
