--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,8 +34,8 @@ jobs:
     - name: Test service URLs
       run: |
         minikube service list
-        minikube service example --url
+        minikube service wisecow-service --url
         echo "------------------opening the service------------------"
-        curl $(minikube service example --url)      
+        curl $(minikube service wisecow-service --url)      
 
     
