--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,7 +34,6 @@ jobs:
     - name: Test service URLs
       run: |
         minikube service list
-        minikube service wisecow-service --url
-          
+        minikube service wisecow-service 
 
     
