--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,9 +31,11 @@ jobs:
     - name: Deploy to Minikube
       run: kubectl apply -f deployment.yaml
 
+    - name: Start tunnel and expose service
+      run: minikube service wisecow-service --url
+      id: service_url
+
     - name: Test service URLs
       run: |
-        minikube service list
-        minikube service wisecow-service 
-
-    
+        echo "Service URL: ${{ steps.service_url.outputs.stdout }}"
+        curl -I ${{ steps.service_url.outputs.stdout }}
