--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,7 @@ jobs:
       uses: actions/checkout@v2
       
     - name: Start Minikube
-      run: minikube start --vm-driver=hyperkit
+      run: minikube start --vm-driver=kvm2
       
     - name: Try the cluster
       run: kubectl get pods -A
