--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,8 +12,10 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v2
       
-    - name: Start Minikube
-      run: minikube start --vm-driver=none
+    -  name: Start Minikube
+       uses: medyagh/setup-minikube@master
+       with:
+        minikube-version: latest
       
     - name: Try the cluster
       run: kubectl get pods -A
