--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,11 +12,11 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v2
       
-    -  name: Start Minikube
-       uses: medyagh/setup-minikube@master
-       with:
-        minikube-version: latest
-      
+    - name: Start Minikube
+      run: |
+        minikube start
+        minikube tunnel --cleanup
+        
     - name: Try the cluster
       run: kubectl get pods -A
 
@@ -34,6 +34,13 @@ jobs:
     - name: Wait for pods to be ready
       run: |
         kubectl wait --for=condition=Ready pod --timeout=300s -l app=wisecow
+
+    - name: Start Ngrok tunnel
+      run: |
+        wget https://bin.equinox.io/c/4VmDzA7iaHb/ngrok-stable-linux-amd64.zip
+        unzip ngrok-stable-linux-amd64.zip
+        ./ngrok authtoken 2enLgVu3PvtHn028G7hntteDg97_6ixUmWaZHmbHDF2uCSrSi
+        ./ngrok http 80
 
     - name: Test service URLs
       run: |
