--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,8 +15,8 @@ jobs:
     - name: Start Minikube
       uses: medyagh/setup-minikube@master
       with:
-        minikube-version: latest # Optionally specify a specific version of Minikube
-
+        minikube-version: latest
+      
     - name: Try the cluster
       run: kubectl get pods -A
 
@@ -31,8 +31,13 @@ jobs:
     - name: Deploy to Minikube
       run: |
         kubectl apply -f deployment.yaml
+        kubectl apply -f service.yaml # Add this line to apply service definition
+
+    - name: Wait for pods to be ready
+      run: |
+        kubectl wait --for=condition=Ready pod --timeout=300s -l app=wisecow
 
     - name: Test service URLs
       run: |
         minikube service list
-        minikube service wisecow-service
+        minikube service wisecow-service --url
