--- a/deployment.yaml
+++ b/deployment.yaml
@@ -32,5 +32,6 @@ spec:
   ports:
     - protocol: TCP
       port: 80
-      targetPort: 80
+      targetPort: 4499
+       nodePort: 31000
   type: LoadBalancer
